<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="weather"
            type="com.alalamiyaalhurra.weather.domain.models.CityUi" />
    </data>





        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent"
            tools:context="com.alalamiyaalhurra.weather.presentation.ui.activities.MainActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <EditText
                    android:layout_width="0dp"
                    android:singleLine="true"
                    android:background="@drawable/search_border"
                    android:padding="12dp"
                    android:imeOptions="actionSearch"
                    android:id="@+id/cit_txt_field"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:baselineAligned="false"
                    android:hint="@string/city_name" />

                <ImageView
                    android:id="@+id/search_btn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="8dp"
                    android:layout_gravity="center"
                    android:src="@drawable/seach_black" />


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:visibility="gone"
                    android:id="@+id/error_layout"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="120dp"
                        android:src="@drawable/error"

                        android:layout_height="120dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:fontFamily="@font/sf_bold"
                        android:textSize="@dimen/large"
                        android:layout_marginTop="8dp"
                        android:text="@string/somehing_goes_wrong"
                        android:layout_height="wrap_content" />

                    <Button
                        android:layout_width="wrap_content"
                        android:text="@string/retry"
                        android:id="@+id/rety_btn"
                        android:layout_marginTop="8dp"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:id="@+id/data_layout"
                    android:visibility="gone"
                    android:layout_height="match_parent">


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_day_times"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        app:layout_constraintBottom_toBottomOf="@+id/accurate_notify"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        tools:layout_editor_absoluteX="136dp" />

                    <TextView
                        android:id="@+id/accurate_notify"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:layout_alignParentBottom="true"
                        android:background="#66000000"
                        android:fontFamily="@font/sf_bold"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/not_accurate_data"
                        android:textColor="@color/white"
                        android:textSize="@dimen/large"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="80dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/sunrise"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="@font/sf_bold"
                        android:text="@{weather.sunRise}"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small"

                        app:layout_constraintBottom_toTopOf="@+id/recycler_day_times"
                        app:layout_constraintEnd_toEndOf="@+id/imageView"
                        app:layout_constraintStart_toStartOf="@+id/imageView"
                        app:layout_constraintTop_toBottomOf="@+id/imageView"
                        tools:text="6:30 AM" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="80dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/sunset" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="@font/sf_bold"
                        android:text="@{weather.sunSet}"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small"
                        app:layout_constraintBottom_toTopOf="@+id/recycler_day_times"
                        app:layout_constraintEnd_toEndOf="@+id/imageView2"
                        app:layout_constraintStart_toStartOf="@+id/imageView2"
                        app:layout_constraintTop_toBottomOf="@+id/imageView2"
                        tools:text="7:00 PM" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        tools:text="Alexandria"
                        android:fontFamily="@font/sf_bold"
                        android:text="@{weather.cityName}"
                        android:textColor="@color/black"
                        android:textSize="@dimen/medium"
                        app:layout_constraintEnd_toStartOf="@+id/imageView2"
                        app:layout_constraintStart_toEndOf="@+id/imageView"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        tools:text="Egypt"
                        android:text="@{weather.country}"
                        android:textColor="@color/black"
                        android:fontFamily="@font/sf_bold"
                        android:textSize="@dimen/large"
                        app:layout_constraintEnd_toEndOf="@+id/textView6"
                        app:layout_constraintStart_toStartOf="@+id/textView6"
                        app:layout_constraintTop_toBottomOf="@+id/textView6" />


                </androidx.constraintlayout.widget.ConstraintLayout>
                <ProgressBar
                    android:layout_width="wrap_content"
                    android:id="@+id/loading_progress"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:indeterminateTint="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <TextView
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:id="@+id/guiding_text"
                    android:layout_centerInParent="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/large"
                    android:fontFamily="@font/sf_bold"
                    android:text="@string/enter_city_name"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

        </LinearLayout>

</layout>